@@ -1,3 +1,7 @@
+2021-10-28  vaiorabbit  <http://twitter.com/vaiorabbit>
+
+	* examples/core_loading_thread.rb: Added
+
 2021-10-27  vaiorabbit  <http://twitter.com/vaiorabbit>
 
 	* examples/models_waving_cubes.rb: Added
